--- a/Arrow website/news.html
+++ b/Arrow website/news.html
@@ -38,7 +38,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 <!---->
 <ul id="menu">
 
-    <li style="margin-top:-0px;"><img src="images/arrow_logo.png"></li>
+    <li style="margin-top:-0px;"><img src="images/header/arrow_logo.png"></li>
     <li><a href='home.html'>HOME</a></li>
     <li><a href='news.html'><span class="r_hover">NEWS</span></a></li>
     <li><a href='#' >PRODUCTS</a>
@@ -86,7 +86,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 </ul>
 
 
-<span style="float:right;"><img src="images/box/tel.png"></span>
+<span style="float:right;"><img src="images/header/tel.png"></span>
 <!---->
       
     </header>
@@ -106,7 +106,7 @@ Arrow is a company dedicated to personal service and fair prices. Thus, the comp
       </div>
 
 
-<div class='item cols-7 brw_box about'><img src="images/box/b-map.png"></div>
+<div class='item cols-7 brw_box about'><img src="images/home/b-map.png"></div>
     </section>
      <div class="copyright"> <span style=" color:#cb1010">ARROW</span> <a href="http://arrowhomeinc.com/" target="_blank">Home Improvement, Inc. (c) 2013</a></div>
     
