--- a/Arrow website/contactus.html
+++ b/Arrow website/contactus.html
@@ -90,7 +90,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 <!---->
 <ul id="menu">
 
-    <li style="margin-top:-0px;"><img src="images/arrow_logo.png"></li>
+    <li style="margin-top:-0px;"><img src="images/header/arrow_logo.png"></li>
     <li><a href='home.html'>HOME</a></li>
     <li><a href='#'>NEWS</a></li>
     <li><a href='#' >PRODUCTS</a>
@@ -137,7 +137,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 
 </ul>
 
-<span style="float:right;"><img src="images/box/tel.png"></span>
+<span style="float:right;"><img src="images/header/tel.png"></span>
 <!---->
       
     </header>
