--- a/Arrow website/product_bathtub.html
+++ b/Arrow website/product_bathtub.html
@@ -232,6 +232,14 @@ div.item.cols-1.video.isotope-item:hover {
 
 <script src="js/jquery.bbq.js" type="text/javascript"></script>       
 <script src="js/jquery.isotope.js" type="text/javascript"></script>
-<script src="js/application.js" type="text/javascript"></script><!---->
+<script src="js/application.js" type="text/javascript"></script>
+
+<script>
+$(document).ready(function(){
+	$('.main-content').isotope({ layoutMode : 'fitRows' });
+});
+</script>
+
+<!---->
 </body>
 </html>
