--- a/Arrow website/product_bathtub.html
+++ b/Arrow website/product_bathtub.html
@@ -18,6 +18,11 @@
 div.item.cols-1.video.isotope-item:hover {
 	background: url(images/productbox.png) no-repeat;
 }
+
+section.main-content.isotope {
+	margin-left: 85px;
+}
+
 </style>
 
 
@@ -100,7 +105,7 @@ div.item.cols-1.video.isotope-item:hover {
     </header>
 
     <section class='main-content'>
-
+	
     <div id="product1" class="product" style="width: 515px; display: none;"> 
     					<img src="images1/product/bathtub/1_tub.png">
                         <div class="description">
@@ -206,7 +211,7 @@ div.item.cols-1.video.isotope-item:hover {
 			<p class='title'>Bathrub - A001Q</p>
 		</a>
 	</div>
-       
+	
     </section>
      <div class="copyright"> <span style=" color:#cb1010">ARROW</span> <a href="http://arrowhomeinc.com/" target="_blank">Home Improvement, Inc. (c) 2013</a></div>
     
