--- a/Arrow website/product_bathtub.html
+++ b/Arrow website/product_bathtub.html
@@ -23,6 +23,10 @@ section.main-content.isotope {
 	margin-left: 85px;
 }
 
+.fancybox-outer {
+	height: 705px;
+}
+
 </style>
 
 
@@ -106,8 +110,8 @@ section.main-content.isotope {
 
     <section class='main-content'>
 	
-    <div id="product1" class="product" style="width: 515px; display: none;"> 
-    					<img src="images1/product/bathtub/1_tub.png">
+    <div id="product1" class="product" style="display: none; width: 436px; margin-left: auto; margin-right: auto; margin-top: 128px; "> 
+    					<img src="images1/product/1.jpg">
                         <div class="description">
                     	<h4>Bathrub - AK170 </h4>
                          <p>
