--- a/Arrow website/product_bathtub.html
+++ b/Arrow website/product_bathtub.html
@@ -27,6 +27,10 @@ section.main-content.isotope {
 	height: 705px;
 }
 
+.fancybox-opened .fancybox-skin {
+	background: url(images1/CataloguePopUpBox.png) no-repeat;
+}
+
 </style>
 
 
