--- a/Arrow website/product_bathtub.html
+++ b/Arrow website/product_bathtub.html
@@ -114,41 +114,25 @@ section.main-content.isotope {
 
     <section class='main-content'>
 	
-    <div id="product1" class="product" style="display: none; width: 436px; margin-left: auto; margin-right: auto; margin-top: 128px; "> 
-    					<img src="images1/product/1.jpg">
-                        <div class="description">
-                    	<h4>Bathrub - AK170 </h4>
-                         <p>
+    <div id="product1" class="product" style="display: none; width: 436px; margin-left: auto; margin-right: auto; margin-top: 128px;" > 
+		<img src="images1/product/1.jpg">
+			<div class="description" style="position: absolute; left: 120px; top: 480px; width: 600px;">
+            	<h4>Bathrub - AK170 </h4>
+					<p>
                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
-                         </p>
-                         <p class="product-weight">
+                    </p>
+                    <p class="product-weight">
                          (Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
-                         </p>
-                    </div>
-                    <div class="direction">
-                    	<h4>Directions</h4>
-                         <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
-                         </p>
-                    </div>
-                    <!--
-                                      <div class="ingredients">
-                    	<h4>Ingredients</h4>
-                         <p>
-                         PEG-8, Sodium Bicarbonate, Ethoxydiglycol, Magnesium Oxide, Glycerin, Oleth-20, Glyceryl Stearate, PEG-100 Stearate, Trihydroxystearin, Tetrahexyldecyl Ascorbate, Tocopheryl Acetate, Retinyl Palmitate, Ascorbyl Palmitate, Caprylic/Capric Triglyceride, Linoleic Acid, Glycine Soja (Soybean) Sterols, Phospholipids, Melaleuca Alternifolia (Tea Tree) Oil, Propylparaben, Stearyl Glycyrrhetinate, Fragrance (Parfum), Limonene, Linalool, Hexyl Cinnamal, Citronellol, Green 6 (CI 61565). Rinse thoroughly.
-                         </p>
-                    </div>
-                    <div class="pop-up-footer">
-                    	<a class="download" href="#">Download</a>
-                    	<a class="pinterest" href="#"></a>
-                    	<a class="twitter" href="#"></a>
-                    	<a class="facebook" href="#"></a>
-                    	<span>Share:</span>
-                    </div> 
-                     -->
-
-    
+                    </p>
+            </div>
+            <div class="direction" style="position: absolute; left: 120px; top: 585px; width: 600px; padding: 0px;" >
+				<h4>Directions</h4>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
+                    </p>
+            </div>
     </div>
+    
 
 
     <!----->
