--- a/Arrow website/package.html
+++ b/Arrow website/package.html
@@ -134,7 +134,7 @@
     <!----->
     <div id="product1" class="product" style="width: 814px; height: 680px; display: none; padding-left: 176px; padding-top: 117px; background: url(images/package/popup/PopUpbox.png) no-repeat; margin-left: auto; margin-right: auto;"> 
     					<!--<img src="images/PopUpbox.png">-->
-						<img src="images/package/popup/1b2.png" style="position: relative; margin-left: auto; margin-right: auto; ">
+						<img src="images1/package/big/4b2.png" style="position: relative; margin-left: auto; margin-right: auto; ">
 						<img id="minus" src="images/package/popup/-.png" style="position: absolute; top: 50px; left: 65px;" />
 						<img src="images/package/popup/cart (circle).png" style="position: absolute; top: 70px; left: 711px;" /> 
 						<img src="images/package/popup/heart circle.png" style="position: absolute; top: 110px; left: 707px;" />
