--- a/Arrow website/product_bathtub.html
+++ b/Arrow website/product_bathtub.html
@@ -109,7 +109,8 @@ section.main-content.isotope {
     <li><a href='clients.html' class='#'>CLIENTS</a> </li>
     <li><a href="stores.html">STORES</a> </li>
 	<li><a href='contactus.html' class='contact'>CONTACT US</a> </li>
-  
+	<li style="margin-top:75px;"><img id="fb" src="images/header/fb.png"></li>
+	<li style="margin-top:78px;"><img id="twt" src="images/header/twitter.png"></li>
 
 
 </ul>
