--- a/Arrow website/product_bathtub.html
+++ b/Arrow website/product_bathtub.html
@@ -123,20 +123,22 @@ section.main-content.isotope {
 
     <section class='main-content'>
 	
-    <div id="product1" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 51px;" > 
+    <div id="product1" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 51px;" >
+		<img src="Arrow icon logo2.png" style="position: absolute; top: 37px; left: 34px;" >
+		<h4 style="position: absolute;top: 1px; left: 80px; font-size: 25px;" >Bathrub - AK170 </h4>		
 		<img src="images1/product/1.jpg">
 			<div class="description" style="position: absolute; left: 55px; top: 405px; width: 600px;">
-            	<h4>Bathrub - AK170 </h4>
-					<p>
+            	<h4 style="color: white;" >Description</h4>
+					<p style="color: white;">
                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
-                    </p>
-                    <p class="product-weight">
+                    </p >
+                    <p class="product-weight" style="color: white;">
                          (Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
                     </p>
             </div>
             <div class="direction" style="position: absolute; left: 55px; top: 508px; width: 600px; padding: 0px;" >
-				<h4>Directions</h4>
-					<p>
+				<h4 style="color: white;" >Directions</h4>
+					<p style="color: white;" >
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
                     </p>
             </div>
