--- a/Arrow website/home.html
+++ b/Arrow website/home.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>ARROW</title>
 
+
 <link href="css/index.css" media="screen" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="fade_slideshow/fader.css">
 <link rel="stylesheet" href="css/menu.css">
@@ -48,7 +49,6 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
             <div class="col_4">
                 <!--<h2>This is a heading title</h2>-->
             </div>
-            
 
              <div class="col_1" style="padding-left: 35px; padding-top: 40px;">
                 <ul>
@@ -107,11 +107,11 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 
 <div class='item cols-1 org_box about'><img src="images/home/b-02.png" width="220" height="192"></div>
 
-<div class='item cols-1 org_box about'><img src="images/home/b-03.png" width="220" height="192"></div>
+<div class='item cols-1 org_box about'><a href="package_ecovative.html"><img src="images/home/b-03.png" width="220" height="192"></a></div>
 
 <div class='item cols-1 whit_box about'><img src="images/home/b-04.png"></div>
 
-<div class='item cols-1 whit_box about'><img src="images/home/b-06.png"></div>
+<div class='item cols-1 whit_box about'><a href="package_designerseries.html"><img src="images/home/b-06.png"></a></div>
 
 <div class='item cols-1 org_box about'><a href="package.html"><img src="images/home/b-05.png" width="220" height="192"></a></div>
 
