--- a/Arrow website/package_designerseries.html
+++ b/Arrow website/package_designerseries.html
@@ -28,6 +28,10 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 	background: url('images1/Hover box.png') no-repeat; 
 }
 
+.hiddenlabel {
+	display: none;
+}
+
 </style>
 
 </head>
@@ -108,6 +112,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 				<td align="center">
 					
 					<div id="hoverbox" style="width: 308px; height: 400px; padding-top: 90px; margin-left: auto; margin-right: auto; ">	
+						<label class="hiddenlabel" >Bathrub AK170</label>
 						<img src="images1/DesignToilets/1.png"   >
 					</div>	
 
@@ -172,5 +177,16 @@ var ss = new TINY.fader.init('ss', {
 <script src="js/jquery.bbq.js" type="text/javascript"></script>
 <script src="js/jquery.isotope.js" type="text/javascript"></script>
 <script src="js/application.js" type="text/javascript"></script>
+
+<script>
+$(document).ready(function(){
+	$('#hoverbox').hover(function() {
+		$('this.hiddenlabel').removeClass('hiddenlabel');
+		}, function() {
+		$('this.hiddenlabel').addClass('hiddenlabel');
+	});
+});
+</script>
+
 </body>
 </html>
