--- a/Arrow website/product_bathtub2.html
+++ b/Arrow website/product_bathtub2.html
@@ -115,10 +115,12 @@ section.main-content.isotope {
     <section class='main-content'>
 	
     <div id="product1" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 51px;" > 
+	<img src="images/header/Arrow icon logo2.png" style="position: absolute; top: 37px; left: 34px;" >
+		<h4 style="position: absolute;top: 1px; left: 80px; font-size: 25px;" >Bathrub - AK170 </h4>		
 		<img src="images/product/bathtub/bathtub_01.jpg">
 			<div class="description" style="position: absolute; left: 55px; top: 405px; width: 600px;">
-            	<h4>Bathrub - AK170 </h4>
-					<p>
+            	<h4 style="color: white;" >Description</h4>
+					<p style="color: white;">
                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
                     </p>
                     <p class="product-weight">
