--- a/Arrow website/ResponsiveTables/ResponsiveTables/responsive.html
+++ b/Arrow website/ResponsiveTables/ResponsiveTables/responsive.html
@@ -27,6 +27,10 @@
 			display: block; 
 		}
 		
+		table {
+			width: 50%;
+		}
+		
 		/* Hide table headers (but not display: none;, for accessibility) */
 		thead tr { 
 			position: absolute;
