--- a/Arrow website/package_designerseries.html
+++ b/Arrow website/package_designerseries.html
@@ -24,35 +24,56 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 
 <style>
 
-#hoverbox:hover {
-	background: url('images/designseries/Hover box.png') no-repeat; 
+@media screen and (max-width: 800px) {
+	img {
+		width: 50%;
+	}
+	
+	.producticons {
+		width: 50%;
+	}
+	
+	table {
+		width: 50%;
+	}
+
 }
 
-#hoverbox:hover .producticons {
-	display: inline;
+
+@media screen and (max-width: 1600px) { 
+
+	#hoverbox:hover {
+		background: url('images/designseries/Hover box.png') no-repeat; 
+	}
+
+	#hoverbox:hover .producticons {
+		display: inline;
+	}
+
+	.hiddenlabel {
+		display: none;
+	}
+
+	.whitefont {
+		color: white;
+		font-family: 'calibri';
+		font-size: 18px;
+	}
+
+	.whitefont:hover {
+		color: black;
+	}
+
+	.fancybox-opened .fancybox-skin {
+		background: url('images/DesignSeries/Design Series Pop Up/HTML elements/Pop Up box.png') no-repeat;
+	}
+
+	.producticons {
+		display: none;
+	}
+
 }
 
-.hiddenlabel {
-	display: none;
-}
-
-.whitefont {
-	color: white;
-	font-family: 'calibri';
-	font-size: 18px;
-}
-
-.whitefont:hover {
-	color: black;
-}
-
-.fancybox-opened .fancybox-skin {
-	background: url('images/DesignSeries/Design Series Pop Up/HTML elements/Pop Up box.png') no-repeat;
-}
-
-.producticons {
-	display: none;
-}
 
 </style>
 
@@ -148,7 +169,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		</div>
 
 		
-		<table style="width: 50%; height: 450px;">	
+		<!--<table style="width: 100%; height: 450px;">-->
+		<table>
 			<tr valign="top">
 				<td style="width: 15%;" >
 					<img src="images/designseries/side2.png"  style="float: left; " >
