--- a/Arrow website/package_ecovative.html
+++ b/Arrow website/package_ecovative.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Berzbay's Website</title>
+	<title>Ecovative</title>
 	<link rel="stylesheet" href="boxes.css" />
-	<style type="text/css">a {text-decoration: none}</style>
+	<style type="text/css">a {text-decoration: none; text-color: none}</style>
 	
 </head>
 <body>
@@ -13,9 +13,9 @@
 			<a href='home.html' > HOME </a>
 			<a href='news.html' > NEWS </a>
 			<a href='#' >PRODUCTS</a>
-			<a href='clients' >CLIENTS</a>
-			<a href='store.html' >STORES</a>
-			<a href='contactus.html' >CONTACT US</a></div>
+			<a href='clients.html' >CLIENTS</a>
+			<a href='stores.html' >STORES</a>
+			<a href='contactus.html'  >CONTACT US</a></div>
 			<div id="kid2"><a href="http://facebook.com" ><img src="images/header/FB.png"></a></div>
 			<div id="kid3"><a href="http://twitter.com" ><img src="images/header/twitter.png"></a></div>
 			<div id="kid4"><img src="images/header/tel.png"></div>
