--- a/Arrow website/package_ecovative.html
+++ b/Arrow website/package_ecovative.html
@@ -34,10 +34,10 @@
 				<img src="images/ecovative/ecovative main page/save water.png">
 			</div>
 			<div id="saveresources">
-				<img src="images/ecovative/ecovative main page/save resources.png"><br><br><br><br>
-				<img id="grayswipe" src="images/ecovative/otto water save/gray swipe.png">
-				<img src="images/ecovative/otto water save/gray swipe.png">
-				<img src="images/ecovative/otto water save/gray swipe.png">
+				<img src="images/ecovative/ecovative main page/save resources.png"><br><br>
+				<img id="orangeswipe" src="images/ecovative/otto water save/orange swipe.png">
+				<img id="grayswipe1" src="images/ecovative/otto water save/gray swipe.png">
+				<img id="grayswipe2" src="images/ecovative/otto water save/gray swipe.png">
 			</div>
 			<div id="saveearth">
 				<img src="images/ecovative/ecovative main page/save the earth.png">
