--- a/Arrow website/package_ecovative.html
+++ b/Arrow website/package_ecovative.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Ecovative</title>
-	<link rel="stylesheet" href="boxes.css" />
+	<link rel="stylesheet" href="ecovative.css" />
 	<style type="text/css">a {text-decoration: none; text-color: none}</style>
 	
 	
