--- a/Arrow website/package_ecovative_options.html
+++ b/Arrow website/package_ecovative_options.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Ecovative</title>
-	<link rel="stylesheet" href="boxes.css" />
+	<link rel="stylesheet" href="ecovative.css" />
 	<style type="text/css">a {text-decoration: none; text-color: none}</style>
+	
 	
 	
 </head>
@@ -21,27 +22,31 @@
 			<div id="kid3"><a class="ex8" href="http://twitter.com" ><img src="images/header/twitter.png"></a></div>
 			<div id="kid4"><img src="images/header/tel.png"></div>
 		</section>
-		<section id="children">
-			<div id="ecovative"><img src="images/ecovative/ecovative main page/ecovative.png"></div>
-			<div id="ecovative2"><img src="images/ecovative/otto waterless/ecovative.png"></div>
-		</section>
+		
 		<section id="children2">	
 			<div id="triple">
 				<img id="lamp" src="images/ecovative/lightbox.png">
 				<img id="package" src="images/ecovative/package.png">
 				<img id="toilet" src="images/ecovative/toilet.png"></div>
-			<div id="savewater">
-				<img src="images/ecovative/ecovative main page/save water.png">
+			<div id="savewater1">
+				<img src="images/ecovative/Otto Water Save/Otto Water Save.png" style="width:350px; height:450px;">
+				<img id="orangeswipe2" src="images/ecovative/otto water save/orange swipe.png">
+				<img id="grayswipe3" src="images/ecovative/otto water save/gray swipe.png">
+				<img id="grayswipe4" src="images/ecovative/otto water save/gray swipe.png">
+				
 			</div>
-			<div id="saveresources">
-				<img src="images/ecovative/ecovative main page/save resources.png"><br><br><br><br>
-				<img id="grayswipe" src="images/ecovative/otto water save/gray swipe.png">
-				<img src="images/ecovative/otto water save/gray swipe.png">
-				<img src="images/ecovative/otto water save/gray swipe.png">
+			<div id="dual">
+				<img src="images/ecovative/otto waterless/ecovative.png">
+				<img src="images/ecovative/otto waterless/ecovative.png">			
+			
+			<div id="quadrup">
+				<img id="smart_glazed" src="images/ecovative/otto water save/Smart Glazed.png">
+				<img id="soft_clorse" src="images/ecovative/otto water save/Soft Clorse.png">
+				<img id="soft_clorse" src="images/ecovative/otto water save/Tornado Flush.png">
+				<img id="soft_clorse" src="images/ecovative/otto water save/Dual Flush.png">
 			</div>
-			<div id="saveearth">
-				<img src="images/ecovative/ecovative main page/save the earth.png">
-			</div>	
+			</div>
+							
 		</section>
 		<section id="daddy">
 			<div id="copyright"> <span style=" color:#cb1010">ARROW</span> <a href="http://arrowhomeinc.com/" target="_blank">Home Improvement, Inc. (c) 2013</a></div>
