--- a/Arrow website/package_ecovative_options.html
+++ b/Arrow website/package_ecovative_options.html
@@ -29,7 +29,7 @@
 				<img id="package" src="images/ecovative/package.png">
 				<img id="toilet" src="images/ecovative/toilet.png"></div>
 			<div id="savewater1">
-				<img src="images/ecovative/Otto Water Save/Otto Water Save.png" style="width:350px; height:450px;">
+				<img src="images/ecovative/Otto Water Save/Otto Water Save.png">
 				<img id="orangeswipe2" src="images/ecovative/otto water save/orange swipe.png">
 				<img id="grayswipe3" src="images/ecovative/otto water save/gray swipe.png">
 				<img id="grayswipe4" src="images/ecovative/otto water save/gray swipe.png">
