--- a/Arrow website/package_ecovative.html
+++ b/Arrow website/package_ecovative.html
@@ -34,7 +34,7 @@
 				<img src="images/ecovative/ecovative main page/save water.png">
 			</div>
 			<div id="saveresources">
-				<img src="images/ecovative/ecovative main page/save resources.png"><br><br>
+				<img id="saveresourcespic" src="images/ecovative/ecovative main page/save resources.png"><br><br>
 				<img id="orangeswipe" src="images/ecovative/otto water save/orange swipe.png">
 				<img id="grayswipe1" src="images/ecovative/otto water save/gray swipe.png">
 				<img id="grayswipe2" src="images/ecovative/otto water save/gray swipe.png">
