--- a/Arrow website/package_designerseries_old.html
+++ b/Arrow website/package_designerseries_old.html
@@ -134,13 +134,9 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		-->
 
 		<div id="product1" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 100px;" >
-			<img src="images/header/Arrow icon logo2.png" style="position: absolute; top:61px; left: 79px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/cart.png" style="position: absolute; top: 71px; left: 435px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/heart.png" style="position: absolute; top: 114px; left: 439px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/share.png" style="position: absolute; top: 151px; left: 437px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/colours.png" style="position: absolute; bottom: 101px; left: 169px;" >
-			<h4 style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >BATHRUB - AK170 </h4>		
-			<img src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/1/white toilet.png" style="position: absolute; left: 109px;">
+			<img src="images/header/Arrow icon logo2.png" style="position: absolute; top: 71px; left: 79px;" >
+			<h4 style="position: absolute;top: 38px; left: 126px; font-size: 25px;" >Bathrub - AK170 </h4>		
+			<img src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/1/White Toilet.png">
 				<div class="description" style="position: absolute; left: 518px; top: 101px; width: 225px;">
 					<h4 style="color: white; font-family: 'calibri'; font-size: 15px;" >Description</h4>
 						<p style="color: white; font-family: 'calibri'; font-size: 15px;">
@@ -157,56 +153,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 						</p>
 				</div>
 		</div>
-		
-		<div id="product2" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 100px;" >
-			<img src="images/header/Arrow icon logo2.png" style="position: absolute; top:61px; left: 79px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/cart.png" style="position: absolute; top: 71px; left: 435px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/heart.png" style="position: absolute; top: 114px; left: 439px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/share.png" style="position: absolute; top: 151px; left: 437px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/colours.png" style="position: absolute; bottom: 101px; left: 169px;" >
-			<h4 style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >BATHRUB - AK170 </h4>		
-			<img src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/6.png" style="position: absolute; left: 55px;">
-				<div class="description" style="position: absolute; left: 518px; top: 101px; width: 225px;">
-					<h4 style="color: white; font-family: 'calibri'; font-size: 15px;" >Description</h4>
-						<p style="color: white; font-family: 'calibri'; font-size: 15px;">
-							 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
-						</p >
-						<p class="product-weight" style="color: white; font-family: 'calibri'; font-size: 15px;">
-							 (Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
-						</p>
-				</div>
-				<div class="direction" style="position: absolute; left: 518px; top: 264px; width: 225px; padding: 0px;" >
-					<h4 style="color: white; font-family: 'calibri'; font-size: 15px;" >Directions</h4>
-						<p style="color: white; font-family: 'calibri'; font-size: 15px;" >
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
-						</p>
-				</div>
-		</div>
-		
-		<div id="product3" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 100px;" >
-			<img src="images/header/Arrow icon logo2.png" style="position: absolute; top:61px; left: 79px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/cart.png" style="position: absolute; top: 71px; left: 435px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/heart.png" style="position: absolute; top: 114px; left: 439px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/share.png" style="position: absolute; top: 151px; left: 437px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/colours.png" style="position: absolute; bottom: 101px; left: 169px;" >
-			<h4 style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >BATHRUB - AK170 </h4>		
-			<img src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/5.png" style="position: absolute; top: 111px; left: 39px;">
-				<div class="description" style="position: absolute; left: 518px; top: 101px; width: 225px;">
-					<h4 style="color: white; font-family: 'calibri'; font-size: 15px;" >Description</h4>
-						<p style="color: white; font-family: 'calibri'; font-size: 15px;">
-							 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
-						</p >
-						<p class="product-weight" style="color: white; font-family: 'calibri'; font-size: 15px;">
-							 (Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
-						</p>
-				</div>
-				<div class="direction" style="position: absolute; left: 518px; top: 264px; width: 225px; padding: 0px;" >
-					<h4 style="color: white; font-family: 'calibri'; font-size: 15px;" >Directions</h4>
-						<p style="color: white; font-family: 'calibri'; font-size: 15px;" >
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu tincidunt leo.
-						</p>
-				</div>
-		</div>
+
 		
 		<!--<table style="width: 100%; height: 450px;">-->
 		<table>
@@ -216,7 +163,6 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 					<img src="images/designseries/bulbicon.png" style="float: left; margin-top: -321px; margin-left: 1px;"  >	
 					<img src="images/designseries/boxicon.png" style="float: left; margin-top: -257px; margin-left: 1px;"  >	
 					<img src="images/designseries/toileticon.png" style="float: left; margin-top: -193px; margin-left: 1px;"  >	
-					<h6 style="position: absolute;top: 415px; left: 90px; font-size: 10px; color: white" >Design Series </h6>
 				</td>
 				<td align="center">
 					<div id="hoverbox" style="width: 308px; height: 400px; padding-top: 90px; margin-left: auto; margin-right: auto; ">	
@@ -231,7 +177,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 				<td align="center">
 				
 					<div id="hoverbox" style="width: 308px; height: 400px; padding-top: 90px; margin-left: auto; margin-right: auto; ">	
-						<a class="fancybox" href="#product2" rel='external' style="float: left; margin-top: 5px; margin-left: 22px;" ><img src="images/Designseries/2.png" style="float: left; margin-top: 5px; margin-left: 0px;" ></a>
+						<a class="fancybox" href="#product1" rel='external' style="float: left; margin-top: 5px; margin-left: 22px;" ><img src="images/Designseries/2.png" style="float: left; margin-top: 5px; margin-left: 0px;" ></a>
 						<label class="producticons" style="float: left; margin-top: -373px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Bathrub AK170</label>
 						<img src="images/product/eye.png" class="producticons" style="float: left; margin-left: 85px; margin-top: 2px;" >
 						<img src="images/product/pushcart.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 2px;" >
@@ -246,7 +192,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 				<td align="center">
 				
 					<div id="hoverbox" style="width: 308px; height: 400px; padding-top: 90px; margin-left: auto; margin-right: auto; ">	
-						<a class="fancybox" href="#product3" rel='external' style="float: left; margin-top: 5px; margin-left: 22px;" ><img src="images/Designseries/3.png" style="float: left; margin-top: 5px; margin-left: -13px;" ></a>
+						<a class="fancybox" href="#product1" rel='external' style="float: left; margin-top: 5px; margin-left: 22px;" ><img src="images/Designseries/3.png" style="float: left; margin-top: 5px; margin-left: -13px;" ></a>
 						<label class="producticons" style="float: left; margin-top: -322px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Bathrub AK170</label>
 						<img src="images/product/eye.png" class="producticons" style="float: left; margin-left: 85px; margin-top: 56px;" >
 						<img src="images/product/pushcart.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 56px;" >
