package_designerseries.html

--- a/Arrow website/package_designerseries.html
+++ b/Arrow website/package_designerseries.html
@@ -337,8 +337,8 @@ $(document).ready(function(){
 
 $(document).ready(function(){
 	$("#colors").click(function(){
-		$("#orangetoilet").show();
-		$("#whitetoilet").hide();
+		$("#orangetoilet").fadeIn(1000);
+		$("#whitetoilet").fadeOut(1000);
 	});
 });
 
