--- a/Arrow website/contactus.html
+++ b/Arrow website/contactus.html
@@ -132,8 +132,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
     <li><a href='clients.html' class='#'>CLIENTS</a> </li>
     <li><a href='stores.html' class='#'>STORES</a> </li>
 	<li><a href='#' class='contact'><span class="r_hover">CONTACT US </span></a> </li>
-	<li style="margin-top:75px;"><img id="fb" src="images/header/fb.png"></li>
-	<li style="margin-top:78px;"><img id="twt" src="images/header/twitter.png"></li>
+	<li style="margin-top:75px;"><img id="fb" src="images/header/Fb.png"></li>
+	<li style="margin-top:78px;"><img id="twt" src="images/header/Twitter.png"></li>
 
 
 
@@ -244,7 +244,7 @@ var ss = new TINY.fader.init('ss', {
 <script>
 $(document).ready(function(){
 	$("div.item.cols-10.rows-11.brw_box.about.isotope-item").css("left", "135px");
-	$("div.item.cols-10.rows-11.brw_box.about.isotope-item").css("background", "url('images/contactus/MailBox.png') no-repeat");
+	$("div.item.cols-10.rows-11.brw_box.about.isotope-item").css("background", "url('images/contactus/Mailbox.png') no-repeat");
 });
 </script>
 </body>
