--- a/Arrow website/package.html
+++ b/Arrow website/package.html
@@ -97,8 +97,8 @@
     <li><a href='clients.html' class='#'>CLIENTS</a> </li>
     <li><a href="stores.html">STORES</a> </li>
 	<li><a href='contactus.html' class='contact'>CONTACT US</a> </li>
-	<li style="margin-top:75px;"><img id="fb" src="images/header/fb.png"></li>
-	<li style="margin-top:78px;"><img id="twt" src="images/header/twitter.png"></li>
+	<li style="margin-top:75px;"><img id="fb" src="images/header/Fb.png"></li>
+	<li style="margin-top:78px;"><img id="twt" src="images/header/Twitter.png"></li>
 
 
 </ul>
@@ -123,8 +123,8 @@
 	<img id="forward" src="images/package/forward.png" style="position: absolute; left: 540px; top: 139px;" />
 	
 	<img id="cart" src="images/package/cart (circle).png" style="position: absolute; left: 603px; top: 226px;" />
-	<img id="heart" src="images/package/heart (likes).png" style="position: absolute; left: 678px; top: 226px;" />
-	<img id="share" src="images/package/share.png" style="position: absolute; left: 744px; top: 226px;" />
+	<img id="heart" src="images/package/Heart (likes).png" style="position: absolute; left: 678px; top: 226px;" />
+	<img id="share" src="images/package/Share.png" style="position: absolute; left: 744px; top: 226px;" />
 	<label id="PackagePrice" style="position: absolute; left: 608px; top: 102px; font-family: 'Calibri'; font-size: 20px; color: white;" >Package Price</label>
 	<label id="Php" style="position: absolute; left: 608px; top: 134px; font-family: 'Calibri'; font-size: 34px; color: white;" >Php 14,999</label>
 	
@@ -160,8 +160,8 @@
 	<img id="forward" src="images/package/forward.png" style="position: absolute; left: 540px; top: 139px;" />
 	
 	<img id="cart" src="images/package/cart (circle).png" style="position: absolute; left: 603px; top: 226px;" />
-	<img id="heart" src="images/package/heart (likes).png" style="position: absolute; left: 678px; top: 226px;" />
-	<img id="share" src="images/package/share.png" style="position: absolute; left: 744px; top: 226px;" />
+	<img id="heart" src="images/package/Heart (likes).png" style="position: absolute; left: 678px; top: 226px;" />
+	<img id="share" src="images/package/Share.png" style="position: absolute; left: 744px; top: 226px;" />
 	<label id="PackagePrice" style="position: absolute; left: 608px; top: 102px; font-family: 'Calibri'; font-size: 20px; color: white;" >Package Price</label>
 	<label id="Php" style="position: absolute; left: 608px; top: 134px; font-family: 'Calibri'; font-size: 34px; color: white;" >Php 16,999</label>
 	
