--- a/Arrow website/package_ecovative.html
+++ b/Arrow website/package_ecovative.html
@@ -81,8 +81,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 			<li><a href='clients.html' class='#'>CLIENTS</a> </li>
 			<li><a href="stores.html">STORES</a> </li>
 			<li><a href='contactus.html' class='contact'>CONTACT US</a> </li>
-			<li style="margin-top:75px;"><img id="fb" src="images/header/fb.png"></li>
-			<li style="margin-top:78px;"><img id="twt" src="images/header/twitter.png"></li>
+			<li style="margin-top:75px;"><img id="fb" src="images/header/Fb.png"></li>
+			<li style="margin-top:78px;"><img id="twt" src="images/header/Twitter.png"></li>
 
 		</ul>
 
@@ -128,7 +128,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		<table border="0" style="width: 100%;">
 			<tr>
 				<td></td>
-				<td><img src="images/ecovative/ecovative main page/ecovative.png"></td>
+				<td><img src="images/Ecovative/Ecovative Main Page/Ecovative.png"></td>
 				<td></td>
 				<td></td>
 				<td></td>
@@ -139,17 +139,17 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 					<table >
 						<tr>
 							<td colspan="2">
-								<img src="images/ecovative/lightbox.png" >	
+								<img src="images/Ecovative/Lightbox.png" >	
 							</td>
 						</tr>
 						<tr>
 							<td colspan="2">						
-								<img src="images/ecovative/package.png" >	
+								<img src="images/Ecovative/Package.png" >	
 							</td>
 						</tr>
 						<tr valign="top">
 							<td id="toilet">						
-								<img src="images/ecovative/toilet.png" >
+								<img src="images/Ecovative/Toilet.png" >
 							</td>
 							<td id="hiddenoption" style="padding-left: 30px; padding-top: 28px; color: white; font-family: 'calibri'; font-size: 14px; background: url('images/Ecovative/Option Box.png') no-repeat; width: 256px; height: 213px;">		
 								<label style="display: block;">Design Series</label>
