--- a/Arrow website/stores.html
+++ b/Arrow website/stores.html
@@ -80,8 +80,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
     <li><a href='clients.html' class='#'>CLIENTS</a> </li>
     <li><a href="stores.html"><span class="r_hover">STORES</span></a> </li>
 	<li><a href='contactus.html' class='contact'>CONTACT US</a> </li>
-	<li style="margin-top:75px;"><img id="fb" src="images/header/fb.png"></li>
-	<li style="margin-top:78px;"><img id="twt" src="images/header/twitter.png"></li>
+	<li style="margin-top:75px;"><img id="fb" src="images/header/Fb.png"></li>
+	<li style="margin-top:78px;"><img id="twt" src="images/header/Twitter.png"></li>
 
 
 
