--- a/Arrow website/stores.html
+++ b/Arrow website/stores.html
@@ -100,14 +100,25 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
       </div>
       <div class='item cols-1 red_box about'><p><span style="font-size:14px; padding-left:20px; font-family:Verdana, Geneva, sans-serif;">Ortigas Ave </span></p></div>
      --> 
-	<img src="images/store/BGC store.png" />	
+	
+	<table border="0" style="width: 1090px; table-layout: fixed;">
+	<tr>
+		<td>
+			<img src="images/store/BGC store.png" />	
+		</td>
 		
-      <div class='item cols-map brw_box map'><iframe width="482" height="192" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.ph/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Bonifacio+Global+City,+Taguig+City,+Metro+Manila&amp;aq=0&amp;oq=Bonifagio&amp;sll=14.591921,121.059819&amp;sspn=0.007019,0.009012&amp;ie=UTF8&amp;hq=&amp;hnear=Fort+Bonifacio,+Taguig+City,+Metro+Manila&amp;t=m&amp;z=14&amp;ll=14.553006,121.05213&amp;output=embed"></iframe><br />
-      	<p style="text-align: right;">
-		<img src="images/store/Arrow icon logo.png" style="text-align: right; padding-top: 5px;" />
-		<span style="font-size:14px; padding-left:10px; font-family:Verdana, Geneva, sans-serif; color: gray; text-align: right;">Bonifacio Global City</span>
-		</p>
-	  </div>
+		<td>
+			<!--<div class='item cols-map brw_box map'> -->
+			
+			<p style="text-align: right;"><iframe width="482" height="192" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.ph/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Bonifacio+Global+City,+Taguig+City,+Metro+Manila&amp;aq=0&amp;oq=Bonifagio&amp;sll=14.591921,121.059819&amp;sspn=0.007019,0.009012&amp;ie=UTF8&amp;hq=&amp;hnear=Fort+Bonifacio,+Taguig+City,+Metro+Manila&amp;t=m&amp;z=14&amp;ll=14.553006,121.05213&amp;output=embed"></iframe></p>
+				<p style="text-align: right;">
+					<img src="images/store/Arrow icon logo.png" style="text-align: right; padding-top: 5px;" />
+					<span style="font-size:14px; padding-left:10px; font-family:Verdana, Geneva, sans-serif; color: gray; text-align: right;">Bonifacio Global City</span>
+				</p>
+			<!--</div>-->
+		</td>
+	</tr>
+	</table>	
 		<p align="center">
 			<img src="images/store/swipe circle.png" /> <img src="images/store/swipe grey.png" />
 		</p>	 
@@ -140,13 +151,12 @@ var ss = new TINY.fader.init('ss', {
 <script src="js/jquery.js" type="text/javascript"></script>
 <script src="js/jquery.bbq.js" type="text/javascript"></script>
 <script src="js/jquery.isotope.js" type="text/javascript"></script>
-<script src="js/application.js" type="text/javascript"></script>
+<!--<script src="js/application.js" type="text/javascript"></script>-->
 <script type="text/javascript">
 	$(document).ready(function(){
 		$("div.item.cols-map.brw_box.map.isotope-item").css("left", "574px");
 		$("div.item.cols-map.brw_box.map.isotope-item").css("top", "76px");
 		$(".main-content").css("height", "412px");
-		
 	});
 </script>
 
