--- a/Arrow website/package_ecovative.html
+++ b/Arrow website/package_ecovative.html
@@ -149,7 +149,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 						</tr>
 						<tr valign="top">
 							<td id="toilet">						
-								<img src="images/Ecovative/toilet.png" >
+								<img src="images/Ecovative/Toilet.png" >
 							</td>
 							<td id="hiddenoption" style="padding-left: 30px; padding-top: 28px; color: white; font-family: 'calibri'; font-size: 14px; background: url('images/Ecovative/Option Box.png') no-repeat; width: 256px; height: 213px;">		
 								<label style="display: block;">Design Series</label>
