--- a/Arrow website/ecovative_options.html
+++ b/Arrow website/ecovative_options.html
@@ -41,7 +41,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		<!---->
 		<ul id="menu">
 
-			<li style="margin-top:-0px;"><img src="images/header/arrow_logo.png"></li>
+			<li style="margin-top:-0px; margin-right: 25px;"><img src="images/header/arrow_logo.png"></li>
 			<li><a href='home.html'><span class="r_hover">HOME</span></a></li>
 			<li><a href='news.html'>NEWS</a></li>
 			<li><a href='#' >PRODUCTS</a>
@@ -205,7 +205,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 			
 			<tr>
 				<td colspan="4" align="center">
-					<img src="images/Ecovative/swipe circle.png" style="padding-left: 20px;"  >
+					<a href="package_ecovative.html"><img src="images/Ecovative/swipe circle.png" style="padding-left: 20px;"  ></a>
 					<img src="images/Ecovative/swipe grey.png" style="padding-left: 20px;"  >
 					<img src="images/Ecovative/swipe grey.png" style="padding-left: 20px;"  >
 				</td>
