--- a/Arrow website/package_ecovative.html
+++ b/Arrow website/package_ecovative.html
@@ -210,7 +210,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		</table>
 
 				<p align="center">
-					<img src="images/Ecovative/swipe circle.png" style="padding-left: 20px;"  >
+					<a href="ecovative_options.html"><img src="images/Ecovative/swipe circle.png" style="padding-left: 20px;"  >
 					<img src="images/Ecovative/swipe grey.png" style="padding-left: 20px;"  >
 					<img src="images/Ecovative/swipe grey.png" style="padding-left: 20px;"  >
 				</p>
