--- a/Arrow website/package_designerseries_2.html
+++ b/Arrow website/package_designerseries_2.html
@@ -136,13 +136,13 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		<div id="product1" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 100px;" >
 			<img src="images/header/Arrow icon logo2.png" style="position: absolute; top:61px; left: 79px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/cart.png" style="position: absolute; top: 71px; left: 435px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/heart.png" style="position: absolute; top: 114px; left: 439px;" >
+			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/Heart.png" style="position: absolute; top: 114px; left: 439px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/share.png" style="position: absolute; top: 151px; left: 437px;" >
 			
 <!--updated the z-index of colors -->			
 			<img id= "colors" src="images/DesignSeries/Design Series Pop Up/HTML elements/colours.png" style="position: absolute; bottom: 101px; left: 169px; z-index: 5;" >
 			<h4 style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >BATHRUB - AK170 </h4>		
-			<img id="whitetoilet" src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/1/white toilet.png" style="position: absolute; left: 109px;">
+			<img id="whitetoilet" src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/1/White Toilet.png" style="position: absolute; left: 109px;">
 			
 <!--OTHER COLORS FOR IMAGE-->
 
@@ -170,7 +170,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		<div id="product2" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 100px;" >
 			<img src="images/header/Arrow icon logo2.png" style="position: absolute; top:61px; left: 79px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/cart.png" style="position: absolute; top: 71px; left: 435px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/heart.png" style="position: absolute; top: 114px; left: 439px;" >
+			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/Heart.png" style="position: absolute; top: 114px; left: 439px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/share.png" style="position: absolute; top: 151px; left: 437px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/colours.png" style="position: absolute; bottom: 101px; left: 169px;" >
 			<h4 style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >BATHRUB - AK170 </h4>		
@@ -195,7 +195,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		<div id="product3" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 100px;" >
 			<img src="images/header/Arrow icon logo2.png" style="position: absolute; top:61px; left: 79px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/cart.png" style="position: absolute; top: 71px; left: 435px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/heart.png" style="position: absolute; top: 114px; left: 439px;" >
+			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/Heart.png" style="position: absolute; top: 114px; left: 439px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/share.png" style="position: absolute; top: 151px; left: 437px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/colours.png" style="position: absolute; bottom: 101px; left: 169px;" >
 			<h4 style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >BATHRUB - AK170 </h4>		
@@ -264,8 +264,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 						<img src="images/product/share.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 2px;" >
 					</div>
 					
-					<a href="package_designerseries.html"><img src="images/DesignSeries/swipe circle.png" style="padding-right: 10px;" ></a>
-					<a href="package_designerseries.html"><img src="images/DesignSeries/swipe grey.png" ></a>
+					<a href="package_designerseries_2.html"><img src="images/DesignSeries/swipe circle.png" style="padding-right: 10px;" ></a>
+					<a href="package_designerseries_2.html"><img src="images/DesignSeries/swipe grey.png" ></a>
 					
 				</td>
 
