--- a/Arrow website/contactus.html
+++ b/Arrow website/contactus.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-us">
 <head>
   <meta charset="utf-8">
@@ -187,9 +188,9 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 			    <textarea name="message" class="validate[required]" id="message" style="background-color: transparent; border-top: none; border: none; color: white; height: 90px; line-height: 30px; background: url(image/contactus/messagelines.png) repeat-y;"></textarea>
 	        </span></p>
 			
-			<p class="submit" style="text-align: right;" >
+			<a href="#"><p class="submit" style="text-align: right;" >
 				<input type="submit" value="submit" style="border: none; text-align: right;" />
-			</p>
+			</p></a>
 
 		  
 		</form>
