--- a/Arrow website/package_designerseries_2.html
+++ b/Arrow website/package_designerseries_2.html
@@ -264,8 +264,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 						<img src="images/product/share.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 2px;" >
 					</div>
 					
-					<a href="package_designerseries_2.html"><img src="images/DesignSeries/swipe circle.png" style="padding-right: 10px;" ></a>
-					<a href="package_designerseries_2.html"><img src="images/DesignSeries/swipe grey.png" ></a>
+					<a href="package_designerseries.html"><img src="images/DesignSeries/swipe circle.png" style="padding-right: 10px;" ></a>
+					<a href="package_designerseries.html"><img src="images/DesignSeries/swipe grey.png" ></a>
 					
 				</td>
 
