--- a/Arrow website/ecovative_options.html
+++ b/Arrow website/ecovative_options.html
@@ -81,8 +81,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 			<li><a href='clients.html' class='#'>CLIENTS</a> </li>
 			<li><a href="stores.html">STORES</a> </li>
 			<li><a href='contactus.html' class='contact'>CONTACT US</a> </li>
-			<li style="margin-top:75px;"><img id="fb" src="images/header/fb.png"></li>
-			<li style="margin-top:78px;"><img id="twt" src="images/header/twitter.png"></li>
+			<li style="margin-top:75px;"><img id="fb" src="images/header/Fb.png"></li>
+			<li style="margin-top:78px;"><img id="twt" src="images/header/Twitter.png"></li>
 
 		</ul>
 
@@ -131,17 +131,17 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 					<table >
 						<tr>
 							<td colspan="2">
-								<img src="images/ecovative/lightbox.png" >	
+								<img src="images/Ecovative/Lightbox.png" >	
 							</td>
 						</tr>
 						<tr>
 							<td colspan="2">						
-								<img src="images/ecovative/package.png" >	
+								<img src="images/Ecovative/Package.png" >	
 							</td>
 						</tr>
 						<tr valign="top">
 							<td id="toilet">						
-								<img src="images/ecovative/toilet.png" >
+								<img src="images/Ecovative/Toilet.png" >
 							</td>
 							<td id="hiddenoption" style="padding-left: 30px; padding-top: 28px; color: white; font-family: 'calibri'; font-size: 14px; background: url('images/Ecovative/Option Box.png') no-repeat; width: 256px; height: 213px;">		
 								<label style="display: block;">Design Series</label>
@@ -167,9 +167,9 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 								
 							</td>
 					
-							<td rowspan="2" style = "background: url('images/Ecovative/Otto Water Save/Orange pop.png') no-repeat; width: 198px; padding-top: 10px; padding-left: 25px; padding-right: 95px;" >
-								<label style="color: white; font-family: 'calibri'; font-size: 13px; ">SMART GLAZE</label>
-								<p align="justify"  style="color: white; font-family: 'calibri';  font-size: 13px;">
+							<td rowspan="2" style = "background: url('images/Ecovative/Otto Water Save/Orange pop.png') no-repeat; width: 198px; padding-top: 8px; padding-left: 35px; padding-right: 85px;" >
+								<label style="color: white; font-family: 'calibri'; font-size: 12px; ">SMART GLAZE</label>
+								<p align="justify"  style="color: white; font-family: 'calibri';  font-size: 12px;">
 									A double coating that achieves a high gloss finish, stain-resistant, anti-bacterial, and scratch-resistant surface. This  superior ability will not
 									allow the surface to rust, fade, dis-color, or stain.
 								</p>
