--- a/Arrow website/clients.html
+++ b/Arrow website/clients.html
@@ -80,7 +80,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
     <li><a href='clients.html' class='#'><span class="r_hover">CLIENTS</span></a> </li>
     <li><a href="stores.html">STORES</a> </li>
 	<li><a href='contactus.html' class='contact'>CONTACT US</a> </li>
-	<li style="margin-top:75px;"><img id="fb" src="images/header/Fb.png"></li>
+	<li style="margin-top:75px; margin-right:-30px;"><img id="fb" src="images/header/Fb.png"></li>
 	<li style="margin-top:78px;"><img id="twt" src="images/header/Twitter.png"></li>
 
 
