--- a/Arrow website/home.html
+++ b/Arrow website/home.html
@@ -81,7 +81,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
     <li><a href='clients.html' class='#'>CLIENTS</a> </li>
     <li><a href="stores.html">STORES</a> </li>
 	<li><a href='contactus.html' class='contact'>CONTACT US</a> </li>
-	<li style="margin-top:75px;"><img id="fb" src="images/header/Fb.png"></li>
+	<li style="margin-top:75px; margin-right:-30px;"><img id="fb" src="images/header/Fb.png"></li>
 	<li style="margin-top:78px;"><img id="twt" src="images/header/Twitter.png"></li>
   
 
