--- a/Arrow website/package_b.html
+++ b/Arrow website/package_b.html
@@ -97,7 +97,7 @@
     <li><a href='clients.html' class='#'>CLIENTS</a> </li>
     <li><a href="stores.html">STORES</a> </li>
 	<li><a href='contactus.html' class='contact'>CONTACT US</a> </li>
-	<li style="margin-top:75px; margin-right:-30px;"><img id="fb" src="images/header/Fb.png"></li>
+	<li style="margin-top:75px;"><img id="fb" src="images/header/Fb.png"></li>
 	<li style="margin-top:78px;"><img id="twt" src="images/header/Twitter.png"></li>
 
 
@@ -114,11 +114,11 @@
     <div class='item cols-2_red rows-2' style="background: url(images/package/PackageBox.png) no-repeat; width: 814px; margin-left: auto; margin-right: auto;">
 	
 	<a class="fancybox" href="#product1" >
-		<img class="avatar" src="images/package/+.png" style="position: absolute; left: 40px; top: 30px;" />
+		<img class="avatar" src="images/package/1s2.png" style="padding-left: 100px; padding-top: 80px;" />
 	</a>
 	
 	
-	<img id="plus" src="images/package/1s2.png" style="padding-left: 100px; padding-top: 80px;" />
+	<img id="plus" src="images/package/+.png" style="position: absolute; left: 40px; top: 30px;" />
 	<!--<img id="back" src="images/back.png" style="position: absolute; left: 44px; top: 134px;" />-->
 	<img id="forward" src="images/package/forward.png" style="position: absolute; left: 540px; top: 139px;" />
 	
@@ -151,11 +151,11 @@
     <div class='item cols-2_red rows-2' style="background: url(images/package/PackageBox.png) no-repeat; width: 814px; margin-left: auto; margin-right: auto;">
 	
 	<a class="fancybox" href="#product1" >
-		<img class="avatar" src="images/package/+.png" style="position: absolute; left: 40px; top: 30px;" />
+		<img class="avatar" src="images/package/1s2.png" style="padding-left: 100px; padding-top: 80px;" />
 	</a>
 	
 	
-	<img id="plus" src="images/package/1s2.png" style="padding-left: 100px; padding-top: 80px;" />
+	<img id="plus" src="images/package/+.png" style="position: absolute; left: 40px; top: 30px;" />
 	<!--<img id="back" src="images/back.png" style="position: absolute; left: 44px; top: 134px;" />-->
 	<img id="forward" src="images/package/forward.png" style="position: absolute; left: 540px; top: 139px;" />
 	
@@ -177,6 +177,7 @@
 						<img src="images/package/popup/heart circle.png" style="position: absolute; top: 110px; left: 707px;" />
 						<img src="images/package/popup/share circle.png" style="position: absolute; top: 150px; left: 712px;" />
     </div>
+	<div><img src=
     <!----->
     
     </section>
