--- a/Arrow website/package_designerseries_2.html
+++ b/Arrow website/package_designerseries_2.html
@@ -112,7 +112,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 			<li><a href='clients.html' class='#'>CLIENTS</a> </li>
 			<li><a href="stores.html">STORES</a> </li>
 			<li><a href='contactus.html' class='contact'>CONTACT US</a> </li>
-			<li style="margin-top:75px;"><img id="fb" src="images/header/Fb.png"></li>
+			<li style="margin-top:75px; margin-right:-30px;"><img id="fb" src="images/header/Fb.png"></li>
 			<li style="margin-top:78px;"><img id="twt" src="images/header/Twitter.png"></li>
 
 		</ul>
@@ -264,7 +264,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 						<img src="images/product/share.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 2px;" >
 					</div>
 					
-					<a href="package_designerseries.html"><img src="images/DesignSeries/swipe circle.png" style="padding-right: 10px;" ></a>
+					<a href="package_designerseries.html"><img src="images/DesignSeries/swipe circle.png" style="padding-right: 5px;" ></a>
 					<a href="package_designerseries.html"><img src="images/DesignSeries/swipe grey.png" ></a>
 					
 				</td>
