--- a/Arrow website/package_f.html
+++ b/Arrow website/package_f.html
@@ -114,11 +114,11 @@
     <div class='item cols-2_red rows-2' style="background: url(images/package/PackageBox.png) no-repeat; width: 814px; margin-left: auto; margin-right: auto;">
 	
 	<a class="fancybox" href="#product1" >
-		<img class="avatar" src="images/package/+.png" style="position: absolute; left: 40px; top: 30px;" />
+		<img class="avatar" src="images/package/1s2.png" style="padding-left: 100px; padding-top: 80px;" />
 	</a>
 	
 	
-	<img id="plus" src="images/package/1s2.png" style="padding-left: 100px; padding-top: 80px;" />
+	<img id="plus" src="images/package/+.png" style="position: absolute; left: 40px; top: 30px;" />
 	<!--<img id="back" src="images/back.png" style="position: absolute; left: 44px; top: 134px;" />-->
 	<img id="forward" src="images/package/forward.png" style="position: absolute; left: 540px; top: 139px;" />
 	
@@ -151,11 +151,11 @@
     <div class='item cols-2_red rows-2' style="background: url(images/package/PackageBox.png) no-repeat; width: 814px; margin-left: auto; margin-right: auto;">
 	
 	<a class="fancybox" href="#product1" >
-		<img class="avatar" src="images/package/+.png" style="position: absolute; left: 40px; top: 30px;" />
+		<img class="avatar" src="images/package/1s2.png" style="padding-left: 100px; padding-top: 80px;" />
 	</a>
 	
 	
-	<img id="plus" src="images/package/1s2.png" style="padding-left: 100px; padding-top: 80px;" />
+	<img id="plus" src="images/package/+.png" style="position: absolute; left: 40px; top: 30px;" />
 	<!--<img id="back" src="images/back.png" style="position: absolute; left: 44px; top: 134px;" />-->
 	<img id="forward" src="images/package/forward.png" style="position: absolute; left: 540px; top: 139px;" />
 	
