--- a/Arrow website/product_bathtub.html
+++ b/Arrow website/product_bathtub.html
@@ -108,7 +108,7 @@ div.item.cols-1.video.isotope-item:hover .producticons  {
     <li><a href='clients.html' class='#'>CLIENTS</a> </li>
     <li><a href="stores.html">STORES</a> </li>
 	<li><a href='contactus.html' class='contact'>CONTACT US</a> </li>
-	<li style="margin-top:75px;"><img id="fb" src="images/header/Fb.png"></li>
+	<li style="margin-top:75px; margin-right:-30px;"><img id="fb" src="images/header/Fb.png"></li>
 	<li style="margin-top:78px;"><img id="twt" src="images/header/Twitter.png"></li>
 
 
