test email and fix package designer red background

--- a/Arrow website/package_designerseries.html
+++ b/Arrow website/package_designerseries.html
@@ -283,8 +283,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 
 					
 				</td>
-				<td align="right" style="width: 20%;" >
-					<img src="images/DesignSeries/side2.png" >
+				<td align="right" style="width: 20%; background: url(images/DesignSeries/side2.png) no-repeat; background-position:right top;" >
+					<!--<img src="images/DesignSeries/side2.png" >-->
 				</td>
 			</tr>
 			
