--- a/Arrow website/clients.html
+++ b/Arrow website/clients.html
@@ -39,7 +39,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 <ul id="menu">
 
     <li style="margin-top:-0px; margin-right: 25px;"><img src="images/header/arrow_logo.png"></li>
-    <li><a href='home.html'>HOME</a></li>
+    <li><a href='index.html'>HOME</a></li>
     <li><a href='news.html'>NEWS</a></li>
     <li><a href='#' >PRODUCTS</a>
     
